// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Archived State renders correct markup 1`] = `
<div tabindex="-1" class="v-list-item theme--light">
  <div class="v-list-item__action"><button type="button" class="task__archive-button v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-marked-outline theme--light"></i></span></button></div>
  <div class="v-list-item__content">
    <div class="v-list-item__title">Test Task</div>
  </div>
  <div class="v-list-item__action">
    <!---->
  </div>
</div>
`;

exports[`Task Default State renders correct markup 1`] = `
<div tabindex="-1" class="v-list-item theme--light">
  <div class="v-list-item__action"><button type="button" class="task__archive-button v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i></span></button></div>
  <div class="v-list-item__content">
    <div class="v-list-item__title">Test Task</div>
  </div>
  <div class="v-list-item__action"><button type="button" class="task__pin-button v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-star-outline theme--light"></i></span></button></div>
</div>
`;

exports[`Task Pinned State renders correct markup 1`] = `
<div tabindex="-1" class="v-list-item theme--light">
  <div class="v-list-item__action"><button type="button" class="task__archive-button v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i></span></button></div>
  <div class="v-list-item__content">
    <div class="v-list-item__title">Test Task</div>
  </div>
  <div class="v-list-item__action"><button type="button" class="task__pin-button v-btn v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-star theme--light blue--text"></i></span></button></div>
</div>
`;
